--- a/Portfolio.html
+++ b/Portfolio.html
@@ -96,7 +96,7 @@
         <div class="header-content">
             
             
-            <h1>abinaya s </h1>
+            <h1>Abinaya S </h1>
             <p>Am student</p>
         </div>
     </header>
@@ -178,7 +178,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 abinaya s</p>
+        <p>&copy; 2025 Abinaya S</p>
     </footer>
 
     <script>
